# Lendy

./: .gitignore  CMakeLists.txt  README.md  Windows dll拷贝复制.txt  copy_so.bat  vision_data.h.in.cmake
apilib/: CMakeLists.txt  KernelEngineHead.h
apilib/db/: CMakeLists.txt  DBEnvHeader.h  DBExports.cpp  DBExports.h  DBUpdater.cpp  DBUpdater.h  DBWorker.cpp  DBWorker.h  DBWorkerPool.cpp  DBWorkerPool.h  Field.cpp  Field.h  MySQLConnection.cpp  MySQLConnection.h  PreparedStatement.cpp  PreparedStatement.h  QueryCallback.cpp  QueryCallback.h  QueryResult.cpp  QueryResult.h  SQLOperation.h
apilib/db/Implementation/: LogonDatabase.cpp  LogonDatabase.h
apilib/define/: Define.h  Macro.h  Moudle.h  Struct.h
apilib/define/netdef/: AsyncAcceptor.h  IOContext.h  IPAddress.h  Packet.h  Strand.h
apilib/dep/: CMakeLists.txt
apilib/dep/asio/asio/detail/: object_pool.hpp
apilib/dep/fmt/: CMakeLists.txt
apilib/log/: CMakeLists.txt  Log.cpp  Log.h  LogComm.h  LogConsole.cpp  LogConsole.h  LogFile.cpp  LogFile.h  LogMessage.cpp  LogMessage.h
apilib/net/: AsynchronismEngine.cpp  AsynchronismEngine.h  AttemperEngine.cpp  AttemperEngine.h  CMakeLists.txt  TCPNetworkEngine.cpp  TCPNetworkEngine.h  TCPNetworkItem.cpp  TCPNetworkItem.h  TCPNetworkThread.h  TCPSocketService.cpp  TCPSocketService.h  TimerEngine.cpp  TimerEngine.h
apilib/util/: BigNumber.cpp  BigNumber.h  CMakeLists.txt  DataQueue.cpp  DataQueue.h  GitVision.cpp  GitVision.h  INIReader.cpp  INIReader.h  MessageBuffer.cpp  MessageBuffer.h  ProducerConsumerQueue.h  SHA1.cpp  SHA1.h  StringFormat.h  StringUtility.cpp  StringUtility.h  Timer.h
cmake/: AutoCollect.cmake  ConfigureBaseTargets.cmake  Utils.cmake  options.cmake  showoptions.cmake
cmake/macros/: ConfigureScripts.cmake
sql/updates/auth/: 2020_03_12_01_auth.sql
src/: CMakeLists.txt
src/correspondserver/: AttemperEngineSink.cpp  AttemperEngineSink.h  CMakeLists.txt  CorrespondConfig.ini  GlobalInfoManager.cpp  GlobalInfoManager.h  Header.h  ServiceUnits.cpp  ServiceUnits.h  main.cpp
src/gameserver/: AttemperEngineSink.cpp  AttemperEngineSink.h  CMakeLists.txt  GameComponent.h  GameConfig.ini  Header.h  RoomUserManager.cpp  RoomUserManager.h  ServiceUnits.cpp  ServiceUnits.h  TableFrame.cpp  TableFrame.h  main.cpp
src/logonserver/: AttemperEngineSink.cpp  AttemperEngineSink.h  CMakeLists.txt  Header.h  LogonConfig.ini  RoomListManager.cpp  RoomListManager.h  ServiceUnits.cpp  ServiceUnits.h  UserListManager.h  main.cpp
src/msgdef/: CMD_Correspond.h  CMD_GameServer.h  CMD_LogonServer.h
src/subgame/: CMakeLists.txt
src/subgame/redblack/: CMD_RedBlack.h  CMakeLists.txt  GameLogic.cpp  GameLogic.h  GameServerManager.cpp  GameServerManager.h  RedBlack_1.ini  TableFrameSink.cpp  TableFrameSink.h
